--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "web-crawler-http",
   "version": "1.0.0",
   "description": "Project for the learn HTTP",
-  "main": "app.js",
+  "type": "module",
+  "exports": {
+    ".": "./app.js"
+  },
   "scripts": {
     "start": "node app.js",
     "test": "jest"
@@ -18,6 +21,9 @@
   },
   "homepage": "https://github.com/danzBraham/web-crawler-http#readme",
   "devDependencies": {
-    "jest": "^29.4.3"
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
+    "babel-jest": "^29.5.0",
+    "jest": "^29.5.0"
   }
 }
