--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "@babel/preset-env": "^7.20.2",
     "babel-jest": "^29.5.0",
     "jest": "^29.5.0"
+  },
+  "dependencies": {
+    "jsdom": "^21.1.0"
   }
 }
