--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     ".": "./app.js"
   },
   "scripts": {
-    "start": "node app.js",
+    "start": "node --no-warnings app.js",
     "test": "jest"
   },
   "repository": {
